--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@taquito/beacon-wallet": "^11.2.0",
     "@taquito/taquito": "^11.2.0",
     "graphql": "^16.3.0",
+    "nanoid": "^3.3.1",
     "next": "^12.0.10",
     "nextjs-progressbar": "^0.0.13",
     "react": "^17.0.2",
