--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^17.0.2",
     "react-async-hook": "^4.0.0",
     "react-dom": "17.0.2",
-    "subscriptions-transport-ws": "^0.11.0"
+    "subscriptions-transport-ws": "^0.11.0",
+    "use-http": "^1.0.26"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.10",
