--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@airgap/beacon-sdk": "^2.3.9",
-    "@apollo/client": "^3.5.8",
-    "@taquito/beacon-wallet": "^11.2.0",
-    "@taquito/taquito": "^11.2.0",
+    "@airgap/beacon-sdk": "^2.3.10",
+    "@apollo/client": "^3.5.10",
+    "@taquito/beacon-wallet": "^12.0.0",
+    "@taquito/taquito": "^12.0.0",
     "graphql": "^16.3.0",
     "nanoid": "^3.3.1",
-    "next": "^12.0.10",
-    "nextjs-progressbar": "^0.0.13",
+    "next": "^12.1.0",
+    "nextjs-progressbar": "^0.0.14",
     "react": "^17.0.2",
     "react-async-hook": "^4.0.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.28.0",
     "subscriptions-transport-ws": "^0.11.0",
-    "use-http": "^1.0.26"
+    "use-http": "^1.0.26",
+    "zustand": "^3.7.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.10",
@@ -40,7 +41,7 @@
     "lint-staged": "^12.3.3",
     "postcss": "^8.3.5",
     "prettier": "2.5.1",
-    "prettier-tslint": "^0.4.2",
+    "prettier-tslint": "^0.2.0",
     "tailwindcss": "^3.0.18",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.5.5"
