--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@taquito/beacon-wallet": "^12.0.0",
     "@taquito/taquito": "^12.0.0",
     "graphql": "^16.3.0",
+    "immer": "^9.0.12",
     "nanoid": "^3.3.1",
     "next": "^12.1.0",
     "nextjs-progressbar": "^0.0.14",
