--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@apollo/client": "^3.5.10",
     "@taquito/beacon-wallet": "^12.0.0",
     "@taquito/taquito": "^12.0.0",
+    "async-wait-until": "^2.0.12",
     "graphql": "^16.3.0",
     "immer": "^9.0.12",
     "nanoid": "^3.3.1",
