--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-async-hook": "^4.0.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.28.0",
+    "react-toastify": "^8.2.0",
     "subscriptions-transport-ws": "^0.11.0",
     "use-http": "^1.0.26",
     "zustand": "^3.7.1"
