--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "async-wait-until": "^2.0.12",
     "graphql": "^16.3.0",
     "immer": "^9.0.12",
+    "javascript-time-ago": "^2.3.13",
     "nanoid": "^3.3.1",
     "next": "^12.1.0",
     "nextjs-progressbar": "^0.0.14",
@@ -25,6 +26,7 @@
     "react-async-hook": "^4.0.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.28.0",
+    "react-time-ago": "^7.1.9",
     "react-toastify": "^8.2.0",
     "subscriptions-transport-ws": "^0.11.0",
     "use-http": "^1.0.26",
