--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-async-hook": "^4.0.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.28.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-time-ago": "^7.1.9",
     "react-toastify": "^8.2.0",
     "subscriptions-transport-ws": "^0.11.0",
