--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-time-ago": "^7.1.9",
     "react-toastify": "^8.2.0",
+    "reactjs-popup": "^2.0.5",
     "subscriptions-transport-ws": "^0.11.0",
     "use-http": "^1.0.26",
     "zustand": "^3.7.1"
