--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@airgap/beacon-sdk": "^3.0.0",
     "@apollo/client": "^3.6.0",
+    "@mdx-js/loader": "^2.1.1",
+    "@next/mdx": "^12.1.5",
     "@taquito/beacon-wallet": "^12.1.0",
     "@taquito/taquito": "^12.1.0",
     "async-wait-until": "^2.0.12",
@@ -48,7 +50,7 @@
     "lint-staged": "^12.4.1",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
-    "prettier-tslint": "^0.4.2",
+    "prettier-tslint": "^0.2.0",
     "tailwindcss": "^3.0.24",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.6.3"
